Fixed some spacing underneath headers in the Home page (#72)

--- a/pages/about.module.css
+++ b/pages/about.module.css
@@ -679,7 +679,7 @@
 
 .carouselHeader {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   max-width: 1200px;
